see the ad title change
by aaryan

--- a/painkiller.html
+++ b/painkiller.html
@@ -61,7 +61,7 @@
 
                                         <div class="card m-3 overlap">
                                             <div class="card-body">
-                                                <p class="card-title card1">"One of the guys"<span class="card-text text1">
+                                                <p class="card-title card1">"Medicine Chest"<span class="card-text text1">
                                                     See the ad
                                                 </span></p>
                                                
