--- a/heroin.html
+++ b/heroin.html
@@ -52,7 +52,7 @@
 
                                         <div class="card m-3 overlap">
                                             <div class="card-body">
-                                                <p class="card-title card1">"One of the guys"<span class="card-text text1">
+                                                <p class="card-title card1">"Best High"<span class="card-text text1">
                                                     See the ad
                                                 </span></p>
                                                
