street name changed
arya successful

--- a/ritalin.html
+++ b/ritalin.html
@@ -119,23 +119,29 @@
             <br><br>
             <hr class="dotted">
 
-<pre>
-    <h1>STREET NAMES</h1>
-<strong style="font-size: medium;">RITALIN:</strong>
-<p style="font-size: medium;">
-Diet Coke               Poor man’s cocaine
-Kiddie Cocaine          R-ball
-Kiddie Coke             Rids
-Skittles                Smarties
-Vitamin R                        
-    
-</p>
-</pre>
+        <h1>STREET NAMES</h1>
+        <div class="row">
 
+                 <div class="col-4">
+                        <p><strong>RITALIN</strong></p>
+                       <p> Diet Coke</p>
+                        <p>Kiddie Cocaine</p>
+                        <p>Kiddie Coke</p>
+                </div>
+                <div class="col-4">
+<p>Poor man’s cocaine</p>
+<p>R-ball</p>
+<p>Rids</p>
+<p>Skittles</p>
+                </div>
+                <div class="col-4">
+                <p>Smarties</p>
+</p>Vitamin R</p></div>
+        </div>
         </div>
         </div>
     </div>
-
+<br><br>
     <div class="container">
         
         <div class="row">
